{
    "name": "TilePlayerMovement",
    "maps": [
        {
            "name": "Main",
            "id": "9a6a328f-6dda-48a2-9263-6baea21db39d",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "b25cbbab-908e-41c8-b154-f4b56443f16e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "7135ebd6-897c-439c-88ca-782bfd4efff4",
                    "path": "2DVector",
                    "interactions": "Press",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "802c61f7-632d-4095-b36f-4ea0c8bb7b86",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1bec3af1-73a5-4ed5-a234-ea208b7b78d4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1c0eaf68-a7df-4e0a-8629-376e428edec5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d3705e00-0cc8-4910-9a55-d8de3185cffa",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}